force-app/main/default/objects/High_Value_Opportunity_Log__c/High_Value_Opportunity_Log__c.object-meta.xml
<CustomObject>
    <label>High Value Opportunity Log</label>
    <nameField>
        <label>High Value Opportunity Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Value Opportunity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>