force-app/main/default/objects/High_Value_Opportunity_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>High Value Opportunity Logs</relationshipLabel>
    <relationshipName>High_Value_Opportunity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>