force-app/main/default/objects/High_Value_Opportunity_Log__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>High Value Opportunity Logs</relationshipLabel>
    <relationshipName>High_Value_Opportunity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>